# papers-mcp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
docs/superpowers/plans/: 2026-07-07-papers-mcp.md
docs/superpowers/specs/: 2026-07-07-papers-mcp-design.md
src/papers_mcp/: corpus.py  search.py  server.py
tests/: conftest.py  test_corpus.py  test_search.py  test_server.py
