[project]
name = "papers-mcp"
version = "0.1.0"
description = "MCP servers over the lipsync-papers and tts-papers research corpora"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.27,<2",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0",
    "starlette",
    "uvicorn>=0.30",
]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "pre-commit>=4.0",
    "pytest>=8.0",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/papers_mcp"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
